--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile">
+    tools:context=".ui.Profiile.ProfileActivity">
 
 
     <androidx.appcompat.widget.Toolbar
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Achievements"
-            android:icon="@drawable/achievements_img"/>
+            android:icon="@drawable/baseline_emoji_events_black_24dp"/>
 
 
     </com.google.android.material.tabs.TabLayout>
