--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.Profiile.ProfileActivity">
 
-    <item android:id="@+id/setting_id"
-        android:icon="@drawable/settings"
-        android:title="Settings"/>
+    <item android:id="@+id/action_more"
+        android:icon="@drawable/ic_more_vert_black_24dp"
+        android:title=""
+        app:showAsAction="always">
+    <menu>
 
-    <item android:id="@+id/Sign_Outid"
-        android:title="Sign Out"/>
+        <item
+            android:id="@+id/setting_id"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Settings"
+            app:showAsAction="ifRoom" />
+
+        <item
+            android:id="@+id/Sign_Outid"
+            android:icon="@drawable/ic_power_settings_new_black_24dp"
+            android:title="Log out"
+            app:showAsAction="ifRoom" />
+    </menu>
+
+    </item>
 
 </menu>
