Upload page design added.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,7 +36,7 @@
             android:textAllCaps="false"
 
             android:fontFamily="@font/roboto"
-            android:text="Register"
+            android:text="Create New Account"
             android:textColor="#fff"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
