--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="SIGN IN"
+                        android:text="Sign In"
                         android:textColor="#000"
                         android:textSize="30sp"
                         android:textStyle="bold"
@@ -149,9 +149,7 @@
                             android:id="@+id/fnamelogintext"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-
                             android:hint="E-Mail"
-
                             android:inputType="textEmailAddress" />
 
                     </com.google.android.material.textfield.TextInputLayout>
